# fitness-functions

./: readme.md  sonarcloud-setup.md  tutorial.md
.Net/logging-standards/: README.md  sonar-project.properties
.github/workflows/: fitness-dotnet-architecture.yml  fitness-dotnet-logging.yml  fitness-java-architecture.yml  fitness-java-logging.yml  fitness-node-architecture.yml  fitness-node-logging.yml  fitness-python-architecture.yml  fitness-python-logging.yml
Java/architecture-patterns/: README.md  pom.xml  (+1 more)
Python/architecture-patterns/: .importlinter  README.md  pyproject.toml  sonar-project.properties
Python/architecture-patterns/.semgrep/: architecture-rules.yml
Python/architecture-patterns/scripts/: run_fitness_checks.sh
Python/architecture-patterns/src/api/: order_api.py
Python/architecture-patterns/src/bad/: order_api_bad.py
Python/architecture-patterns/src/repositories/: order_repository.py
Python/architecture-patterns/src/services/: order_service.py
Python/architecture-patterns/tests/: test_order_service.py
Python/logging-standards/: .gitignore  README.md  pyproject.toml  sonar-project.properties
Python/logging-standards/.github/workflows/: fitness-python-logging.yml
Python/logging-standards/.semgrep/: logging-rules.yml  required-fields-rules.yml
Python/logging-standards/scripts/: push_logging_metrics.py  run_fitness_checks.sh
Python/logging-standards/src/: app_bad.py  app_good.py  order_service.py
Python/logging-standards/tests/: test_order_service.py
scripts/: setup_sonarqube_metrics.sh  trend_report.py
(+67 files in other folders)
